- New index style, mobile first - Change some assets - Add comments - Fix navbar behavior js to checking scrollbar position onload - Update cdn

--- a/styles/default.css
+++ b/styles/default.css
@@ -2,6 +2,8 @@
 *
 * ==========================================
 * Pierre Gervais
+* Studi évaluation
+* Site vitrine association
 * Default site style
 * ==========================================
 *
@@ -26,13 +28,13 @@
 }
 
 .navbar .navbar-brand {
-    color: #fff;
+    color: rgb(255, 0, 0);
 }
 
 
 /* Change navbar styling on scroll */
 .navbar.active {
-    background: rgb(41 41 41 / 61%);
+    background: rgba(71, 71, 71, 0.842);
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -52,13 +54,13 @@
 
 
 /* Change navbar styling on small viewports */
-@media (max-width: 991.98px) {
+@media (max-width: 960px) {
     .navbar {
         background: rgb(41, 41, 41);
     }
 
     .navbar .navbar-brand, .navbar .nav-link {
-        color: #555;
+        color: rgb(255, 255, 255);
     }
 }
 
@@ -107,20 +109,39 @@ body {
     min-width: 300px;
     max-width: 300px;
 }
-.card-event
-{
-    width: 100%;
-    min-width: 300px;
-}
 .small
 {
     max-width: 300px;
 }
-.icon:hover
-{
-    color: rgb(0, 0, 0);
-}
 .event-content
 {
     background-color: transparent;
+}
+
+
+@media screen and (max-width:768px) {
+    .card-event
+    {
+        width: 100%;
+    }
+}
+@media screen and (min-width:768px) {
+    .card-event
+    {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width:960px) {
+    .icon:hover
+    {
+        color: rgb(87, 187, 187);
+    }
+}
+@media screen and (min-width:960px) {
+    .icon:hover
+    {
+        color: rgb(0, 0, 0);
+    }
 }
